# str_split

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg.json
.github/: CODEOWNERS
.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
cookiecutter/{{cookiecutter.project_name}}/: .pre-commit-config.yaml  CMakeLists.txt  README.md  vcpkg.json
cookiecutter/{{cookiecutter.project_name}}/.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
examples/: CMakeLists.txt  str_split.cpp  todo.cpp
include/beman/str_split/: CMakeLists.txt  config.hpp  config_generated.hpp.in  split_when.hpp  str_split.cppm  str_split.hpp  str_split_to.hpp  todo.hpp
include/beman/str_split/detail/: non_propagating_cache.hpp  pipeable.hpp
port/: portfile.cmake.in  vcpkg.json.in
tests/beman/str_split/: CMakeLists.txt  split_when.test.cpp  str_split_to.test.cpp  todo.test.cpp
